修复一些bug，修改一些主题，发布版本1.2

--- a/app/src/main/assets/about_app.html
+++ b/app/src/main/assets/about_app.html
@@ -53,13 +53,15 @@
 
 
 <p>
-    <a href="https://github.com/ZengTianShengZ/Bill"><div style="font-size:20px;color:#800000">
-        感谢ddd开源
-    </div></a>
+    <a href="https://github.com/ZengTianShengZ/Bill">查看项目源码,欢迎 star ^-^!!!</a>
 </p>
 <p>
     <a href="https://github.com/ZengTianShengZ/Bill/issues"> 报告错误或提出需求</a>
 </p>
+<p>
+    <a href="http://weibo.com/2876232957/profile?rightmod=1&wvr=6&mod=personinfo&is_all=1"> 微博联系作者</a>
+</p>
+
 
 <div style="font-size:20px;color:#800000">
     感谢开源
